下一页解决获取水军信息跨域成功,可以识别图片信息

--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,7 @@
             <a href="#" class="list-group-item list-group-item-action">Page not found 404</a>
             <a href="#" class="list-group-item list-group-item-action">Page not found 404</a>
         </div>
+        <input id="informa_identifica" type="file" multiple="multiple" accept="image/*" style="display: none">
     </div>
     <div class="row" style="margin-top: 5px">
         <div class="col-7" style="padding-right: 2.5px;">
