修改提示,解决错误图片bug

--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
         <div class="list-group col-12" style="padding-left: 15px">
             <a href="#" value="copy_order_address" class="list-group-item list-group-item-action">复制订单信息</a>
             <a href="#" value="order_image_loading_Process" class="list-group-item list-group-item-action">水军信息识别</a>
-            <a href="#" class="list-group-item list-group-item-action">Page not found 404</a>
-            <a href="#" class="list-group-item list-group-item-action">Page not found 404</a>
-            <a href="#" class="list-group-item list-group-item-action">Page not found 404</a>
+            <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
+            <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
+            <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
         </div>
         <input id="informa_identifica" type="file" multiple="multiple" accept="image/*" style="display: none">
     </div>
