--- a/popup.html
+++ b/popup.html
@@ -4,88 +4,99 @@
     <meta charset="UTF-8">
     <title>辅助主页V1.2</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/contentScript.css">
 </head>
 <body style="margin: 0;padding: 0">
-<div style="background-color: #e9ecef;padding: 5px;width: 300px;margin: 0 auto;height: auto;max-height: 800px;min-height: 200px;">
-    <div style="display: block">
-        <div>
-            <img style="width: 20px;display: inline-block;vertical-align: middle;" src="images/favicon.png"/>
-            <span style="display: inline-block;vertical-align: middle;">辅助助手 V1.2</span>
-        </div>
-    </div>
-    <div style="display: block">
-        <div style="margin-top: 5px">
-            <div id="spinnerBorder" class="text-center list-group-item list-group-item-action">
-                <div class="spinner-border" role="status"><span class="sr-only"></span></div>
-                <div style="color: red;font-size: 14px;" id="sms_message"></div>
+<div style="width: 300px;margin: 0 auto;">
+    <div style="background-color: #e9ecef;padding: 5px;">
+        <div style="/* display: none; */">
+            <div>
+                <img style="width: 20px;display: inline-block;vertical-align: middle;" src="images/favicon.png"/>
+                <span style="display: inline-block;vertical-align: middle;">辅助助手 V1.2</span>
             </div>
-            <div id="featureList" style="display: none">
-                <div>
-                    <a href="#" value="copy_order_address" class="list-group-item list-group-item-action">复制订单信息</a>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-9 list-group-item list-group-item-action" value="order_image_loading_Process" style="cursor: pointer">
-                            <a href="#" style="color: #495057;text-decoration: none;">水军信息识别</a>
-                        </div>
-                        <div class="col-3 list-group-item list-group-item-action" value="setting_order_table" style="cursor: pointer;text-align: center;">
-                            <a href="#" style="color: #495057;text-decoration: none;">
-                                <svg style="width: 20px;vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor" id="gear">
-                                    <path fill-rule="evenodd"
-                                            d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 014.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 01-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 011.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 012.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 012.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 011.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 01-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 018.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 001.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 00.52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 00-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 00-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 00-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 00-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 00.52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 001.255-.52l.094-.319z"></path>
-                                    <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 100 4.492 2.246 2.246 0 000-4.492zM4.754 8a3.246 3.246 0 116.492 0 3.246 3.246 0 01-6.492 0z"></path>
-                                </svg>
-                            </a>
-                        </div>
+        </div>
+        <div style="/* display: none; */">
+            <div>
+                <div style="margin-top: 5px">
+                    <div id="spinnerBorder" class="text-center list-group-item list-group-item-action">
+                        <div class="spinner-border" role="status"><span class="sr-only"></span></div>
+                        <div style="color: red;font-size: 14px;" id="sms_message"></div>
                     </div>
-                </div>
-                <div>
-                    <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
-                </div>
-                <div>
-                    <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
-                </div>
-            </div>
-            <input id="informa_identifica" type="file" multiple="multiple" accept="image/*" style="display: none">
-        </div>
-        <div class="container" style="margin-top: 5px;">
-            <div class="row">
-                <div class="card col-8">
-                    <div class="card-body">
-                        <button value="open_back" type="button" class="btn btn-outline-primary btn-sm btn-block">
-                            <div>
-                                <svg style="width: 21px;display: inline-block;vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-box-arrow-in-down-left" fill="currentColor" id="box-arrow-in-down-left">
-                                    <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 00-.5-.5H2.5A1.5 1.5 0 001 3.5v10A1.5 1.5 0 002.5 15h10a1.5 1.5 0 001.5-1.5V6.864a.5.5 0 00-1 0V13.5a.5.5 0 01-.5.5h-10a.5.5 0 01-.5-.5v-10a.5.5 0 01.5-.5h6.636a.5.5 0 00.5-.5z"></path>
-                                    <path fill-rule="evenodd" d="M5 10.5a.5.5 0 00.5.5h5a.5.5 0 000-1H6.707l8.147-8.146a.5.5 0 00-.708-.708L6 9.293V5.5a.5.5 0 00-1 0v5z"></path>
-                                </svg>
+                    <div id="featureList" style="display: none">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-9 list-group-item list-group-item-action" value="copy_order_address" style="cursor: pointer">
+                                    <a href="#" style="color: #495057;text-decoration: none;">复制订单信息</a>
+                                </div>
+                                <div class="col-3 list-group-item list-group-item-action" value="setting_order_table" style="cursor: pointer;border-top-width: 1px;">
+                                    <a href="#" style="color: #495057;display: block;text-align: center;">
+                                        <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor" id="gear">
+                                            <path fill-rule="evenodd"
+                                                  d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 014.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 01-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 011.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 012.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 012.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 011.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 01-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 018.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 001.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 00.52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 00-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 00-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 00-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 00-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 00.52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 001.255-.52l.094-.319z"></path>
+                                            <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 100 4.492 2.246 2.246 0 000-4.492zM4.754 8a3.246 3.246 0 116.492 0 3.246 3.246 0 01-6.492 0z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
-                            <span style="display: inline-block;vertical-align: middle;">打开商家后台</span>
-                        </button>
-                        <button value="stop_opera" type="button" class="btn btn-outline-primary btn-sm btn-block">
-                            停止当前操作
-                        </button>
+                        </div>
+                        <div>
+                            <a href="#" value="order_image_loading_Process" class="list-group-item list-group-item-action">水军信息识别</a>
+                        </div>
+                        <div>
+                            <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
+                        </div>
+                        <div>
+                            <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
+                        </div>
                     </div>
+                    <input id="informa_identifica" type="file" multiple="multiple" accept="image/*" style="display: none">
                 </div>
-                <div class="card col-4" style="padding: 0 8px;">
-                    <div class="card-body" style="padding-right: 10px;padding: 8px 0;">
-                        <small id="prompt" style="color: #545b62">鼠标停留对应按钮显示提示信息.</small>
+                <div class="container" style="margin-top: 5px;">
+                    <div class="row">
+                        <div class="card col-8">
+                            <div class="card-body">
+                                <button value="open_back" type="button" class="btn btn-outline-primary btn-sm btn-block">
+                                    <div>
+                                        <svg style="width: 21px;display: inline-block;vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-box-arrow-in-down-left" fill="currentColor" id="box-arrow-in-down-left">
+                                            <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 00-.5-.5H2.5A1.5 1.5 0 001 3.5v10A1.5 1.5 0 002.5 15h10a1.5 1.5 0 001.5-1.5V6.864a.5.5 0 00-1 0V13.5a.5.5 0 01-.5.5h-10a.5.5 0 01-.5-.5v-10a.5.5 0 01.5-.5h6.636a.5.5 0 00.5-.5z"></path>
+                                            <path fill-rule="evenodd" d="M5 10.5a.5.5 0 00.5.5h5a.5.5 0 000-1H6.707l8.147-8.146a.5.5 0 00-.708-.708L6 9.293V5.5a.5.5 0 00-1 0v5z"></path>
+                                        </svg>
+                                    </div>
+                                    <span style="display: inline-block;vertical-align: middle;">打开商家后台</span>
+                                </button>
+                                <button value="stop_opera" type="button" class="btn btn-outline-primary btn-sm btn-block">
+                                    停止当前操作
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card col-4" style="padding: 0 8px;">
+                            <div class="card-body" style="padding-right: 10px;padding: 8px 0;">
+                                <small id="prompt" style="color: #545b62">鼠标停留对应按钮显示提示信息.</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div style="height: calc(100% - 66px);position: absolute;max-width: 290px;/* display: none; */;top: 36px;width: calc(100% - 10px);opacity: 1;background-color: white;border-radius: 5px;">
+                <div style="height: 100%;width: 20px;background-color: white;float: right;border-top-right-radius: 5px;border-bottom-right-radius: 5px;text-align: center;font-weight: bold;display: flex;border-left: groove;border-left-width: 1px;">
+                    <div class="kauij" style="align-self: center;margin-left: 2px;">》</div>
+                </div>
+            </div>
         </div>
-    </div>
-<!--    <div style="height: 100%">-->
-<!--        测试中的东西-->
-<!--    </div>-->
-    <div class="row" style="text-align: right">
-        <div class="col-12">
-            <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-badge-tm" fill="currentColor" id="badge-tm"><path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"></path><path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z"></path></svg></span>
-            <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-headphones" fill="currentColor" id="headphones"><path fill-rule="evenodd" d="M8 3a5 5 0 00-5 5v4.5H2V8a6 6 0 1112 0v4.5h-1V8a5 5 0 00-5-5z"></path><path d="M11 10a1 1 0 011-1h2v4a1 1 0 01-1 1h-1a1 1 0 01-1-1v-3zm-6 0a1 1 0 00-1-1H2v4a1 1 0 001 1h1a1 1 0 001-1v-3z"></path></svg></span>
-            <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill" fill="currentColor" id="bookmark-star-fill"><path fill-rule="evenodd" d="M4 0a2 2 0 00-2 2v13.5a.5.5 0 00.74.439L8 13.069l5.26 2.87A.5.5 0 0014 15.5V2a2 2 0 00-2-2H4zm4.16 4.1a.178.178 0 00-.32 0l-.634 1.285a.178.178 0 01-.134.098l-1.42.206a.178.178 0 00-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 00.258.187l1.27-.668a.178.178 0 01.165 0l1.27.668a.178.178 0 00.257-.187L9.368 7.15a.178.178 0 01.05-.158l1.028-1.001a.178.178 0 00-.098-.303l-1.42-.206a.178.178 0 01-.134-.098L8.16 4.1z"></path></svg></span>
-            <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-chat-text-fill" fill="currentColor" id="chat-text-fill"><path fill-rule="evenodd" d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 01-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h4a.5.5 0 000-1h-4z"></path></svg></span>
+        <div class="container" style="padding-right: 0px;">
+            <div class="row" style="text-align: right;">
+                <div class="col-12">
+                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-badge-tm" fill="currentColor" id="badge-tm"><path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"></path><path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z"></path></svg></span>
+                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-headphones" fill="currentColor" id="headphones"><path fill-rule="evenodd" d="M8 3a5 5 0 00-5 5v4.5H2V8a6 6 0 1112 0v4.5h-1V8a5 5 0 00-5-5z"></path><path d="M11 10a1 1 0 011-1h2v4a1 1 0 01-1 1h-1a1 1 0 01-1-1v-3zm-6 0a1 1 0 00-1-1H2v4a1 1 0 001 1h1a1 1 0 001-1v-3z"></path></svg></span>
+                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill" fill="currentColor" id="bookmark-star-fill"><path fill-rule="evenodd" d="M4 0a2 2 0 00-2 2v13.5a.5.5 0 00.74.439L8 13.069l5.26 2.87A.5.5 0 0014 15.5V2a2 2 0 00-2-2H4zm4.16 4.1a.178.178 0 00-.32 0l-.634 1.285a.178.178 0 01-.134.098l-1.42.206a.178.178 0 00-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 00.258.187l1.27-.668a.178.178 0 01.165 0l1.27.668a.178.178 0 00.257-.187L9.368 7.15a.178.178 0 01.05-.158l1.028-1.001a.178.178 0 00-.098-.303l-1.42-.206a.178.178 0 01-.134-.098L8.16 4.1z"></path></svg></span>
+                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-chat-text-fill" fill="currentColor" id="chat-text-fill"><path fill-rule="evenodd" d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 01-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h4a.5.5 0 000-1h-4z"></path></svg></span>
+                </div>
+            </div>
         </div>
+
     </div>
 </div>
+
 
 <style>
 
