生成表头排序

--- a/popup.html
+++ b/popup.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="drawer" aria-drawer="setting_order_table" style="display: none">
-                <div class="drawerDoor">
+                <div class="drawer-door">
                     <div class="drawerHandle" data-toggle="setting_order_table" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
                 </div>
                 <div class="drawer-body">
@@ -93,16 +93,19 @@
                             </button>
                         </div>
                     </div>
-                    <ol id="tableHeader">
-                        <li serial="1">aaaбегемот测试_1</li>
-                        <li serial="2">корм_2</li>
-                        <li serial="3">антон_3</li>
-                        <li serial="4">сало_4</li>
-                        <li serial="5">железосталь_5</li>
-                        <li serial="6">валик_6</li>
-                        <li serial="7">кровать_7</li>
-                        <li serial="8">краб_8</li>
-                    </ol>
+                    <div class="drawer-scrollbar">
+                        <ol id="tableHeader">
+                            <li serial="1">aaaбегемот测试_1</li>
+                            <li serial="2">корм_2</li>
+                            <li serial="3">антон_3</li>
+                            <li serial="4">сало_4</li>
+                            <li serial="5">железосталь_5</li>
+                            <li serial="6">валик_6</li>
+                            <li serial="7">кровать_7</li>
+                            <li serial="8">краб_8</li>
+                        </ol>
+                    </div>
+
                 </div>
             </div>
         </div>
