--- a/popup.html
+++ b/popup.html
@@ -77,24 +77,49 @@
                     </div>
                 </div>
             </div>
-            <div class="drawer" aria-drawer="setting_order_table" style="display: none">
+            <div style="height: calc(100% - 66px);background-color: rgba(0, 0, 0, 0.5);position: absolute;top: 36px;margin-right: 5px;width: 290px;display: none" >
+                <div class="drawer" aria-drawer="setting_order_table">
+                    <div class="drawer-door">
+                        <div class="drawerHandle" data-toggle="setting_order_table" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
+                    </div>
+                    <div class="drawer-body">
+                        <div class="row" style="padding: 5px;padding-left: 10px;">
+                            <div class="col-9">Table表头排序</div>
+                            <div class="col-3" style="text-align: right;">
+                                <button value="add_table_handle" style="padding: 0px 8px;margin-top: -4px" data-toggle="setting_order_table_all" type="button" class="btn btn-outline-secondary btn-sm">
+                                    <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-list-ol" fill="currentColor" id="list-ol">
+                                        <path fill-rule="evenodd" d="M5 11.5a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zm0-4a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zm0-4a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5z"></path>
+                                        <path d="M1.713 11.865v-.474H2c.217 0 .363-.137.363-.317 0-.185-.158-.31-.361-.31-.223 0-.367.152-.373.31h-.59c.016-.467.373-.787.986-.787.588-.002.954.291.957.703a.595.595 0 01-.492.594v.033a.615.615 0 01.569.631c.003.533-.502.8-1.051.8-.656 0-1-.37-1.008-.794h.582c.008.178.186.306.422.309.254 0 .424-.145.422-.35-.002-.195-.155-.348-.414-.348h-.3zm-.004-4.699h-.604v-.035c0-.408.295-.844.958-.844.583 0 .96.326.96.756 0 .389-.257.617-.476.848l-.537.572v.03h1.054V9H1.143v-.395l.957-.99c.138-.142.293-.304.293-.508 0-.18-.147-.32-.342-.32a.33.33 0 00-.342.338v.041zM2.564 5h-.635V2.924h-.031l-.598.42v-.567l.629-.443h.635V5z"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="drawer-scrollbar">
+                            <ol id="tableHeader" style="padding-left: 50px">
+                                <li serial="1">aaaбегемот测试_1</li>
+                                <li serial="2">корм_2</li>
+                                <li serial="3">антон_3</li>
+                                <li serial="4">сало_4</li>
+                                <li serial="5">железосталь_5</li>
+                                <li serial="6">валик_6</li>
+                                <li serial="7">кровать_7</li>
+                                <li serial="8">краб_8</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="height: calc(100% - 66px);background-color: rgba(0, 0, 0, 0.5);position: absolute;top: 36px;margin-right: 5px;width: 290px;display: none;z-index: 1">
+                <div class="drawer" aria-drawer="setting_order_table_all" style="max-width: 200px">
                 <div class="drawer-door">
-                    <div class="drawerHandle" data-toggle="setting_order_table" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
+                    <div class="drawerHandle" data-toggle="setting_order_table_all" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
                 </div>
                 <div class="drawer-body">
                     <div class="row" style="padding: 5px;padding-left: 10px;">
-                        <div class="col-9">Table表头排序</div>
-                        <div class="col-3" style="text-align: right;">
-                            <button value="add_table_handle" style="padding: 0px 8px;margin-top: -4px" type="button" class="btn btn-outline-secondary btn-sm">
-                                <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-list-ol" fill="currentColor" id="list-ol">
-                                    <path fill-rule="evenodd" d="M5 11.5a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zm0-4a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zm0-4a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5z"></path>
-                                    <path d="M1.713 11.865v-.474H2c.217 0 .363-.137.363-.317 0-.185-.158-.31-.361-.31-.223 0-.367.152-.373.31h-.59c.016-.467.373-.787.986-.787.588-.002.954.291.957.703a.595.595 0 01-.492.594v.033a.615.615 0 01.569.631c.003.533-.502.8-1.051.8-.656 0-1-.37-1.008-.794h.582c.008.178.186.306.422.309.254 0 .424-.145.422-.35-.002-.195-.155-.348-.414-.348h-.3zm-.004-4.699h-.604v-.035c0-.408.295-.844.958-.844.583 0 .96.326.96.756 0 .389-.257.617-.476.848l-.537.572v.03h1.054V9H1.143v-.395l.957-.99c.138-.142.293-.304.293-.508 0-.18-.147-.32-.342-.32a.33.33 0 00-.342.338v.041zM2.564 5h-.635V2.924h-.031l-.598.42v-.567l.629-.443h.635V5z"></path>
-                                </svg>
-                            </button>
-                        </div>
+                        <div class="col-9">末差表头</div>
                     </div>
                     <div class="drawer-scrollbar">
-                        <ol id="tableHeader">
+                        <ol id="newTableHeader" style="padding-left: 50px">
                             <li serial="1">aaaбегемот测试_1</li>
                             <li serial="2">корм_2</li>
                             <li serial="3">антон_3</li>
@@ -105,8 +130,8 @@
                             <li serial="8">краб_8</li>
                         </ol>
                     </div>
-
                 </div>
+            </div>
             </div>
         </div>
         <div class="container" style="padding-right: 0px;">
