--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-9 list-group-item list-group-item-action" value="copy_order_address" style="cursor: pointer">
-                                    <a href="#" style="color: #495057;text-decoration: none;">复制信息</a>
+                                    <a href="#" style="color: #495057;text-decoration: none;">复制订单信息</a>
                                 </div>
                                 <div class="col-3 list-group-item list-group-item-action" id="setting_order_table" data-toggle="setting_order_table" value="setting_order_table" style="cursor: pointer;border-top-width: 1px;">
                                     <a href="#" style="color: #495057;display: block;text-align: center;">
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="#" value="order_image_loading_Process" class="list-group-item list-group-item-action">信息识别</a>
+                            <a href="#" value="order_image_loading_Process" class="list-group-item list-group-item-action">识别水军订单</a>
                         </div>
                         <div>
                             <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
@@ -77,14 +77,14 @@
                     </div>
                 </div>
             </div>
-            <div style="height: calc(100% - 66px);background-color: rgba(0, 0, 0, 0.5);position: absolute;top: 36px;margin-right: 5px;width: 290px;display: none" >
+            <div class="drawer-mask" >
                 <div class="drawer" aria-drawer="setting_order_table">
                     <div class="drawer-door">
-                        <div class="drawerHandle" data-toggle="setting_order_table" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
+                        <div class="drawerHandle" data-toggle="setting_order_table">》</div>
                     </div>
                     <div class="drawer-body">
                         <div class="row" style="padding: 5px;padding-left: 10px;">
-                            <div class="col-9">Table表头排序</div>
+                            <div class="col-9">订单表头排序</div>
                             <div class="col-3" style="text-align: right;">
                                 <button value="add_table_handle" style="padding: 0px 8px;margin-top: -4px" data-toggle="setting_order_table_all" type="button" class="btn btn-outline-secondary btn-sm">
                                     <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-list-ol" fill="currentColor" id="list-ol">
@@ -96,38 +96,24 @@
                         </div>
                         <div class="drawer-scrollbar">
                             <ol id="tableHeader" style="padding-left: 50px">
-                                <li serial="1">aaaбегемот测试_1</li>
-                                <li serial="2">корм_2</li>
-                                <li serial="3">антон_3</li>
-                                <li serial="4">сало_4</li>
-                                <li serial="5">железосталь_5</li>
-                                <li serial="6">валик_6</li>
-                                <li serial="7">кровать_7</li>
-                                <li serial="8">краб_8</li>
+<!--                                <li serial="0"><img class="table-Header-li" style="margin-left: -50px;" src="images/delete.png"/><span>示例表头</span></li>-->
                             </ol>
                         </div>
                     </div>
                 </div>
             </div>
-            <div style="height: calc(100% - 66px);background-color: rgba(0, 0, 0, 0.5);position: absolute;top: 36px;margin-right: 5px;width: 290px;display: none;z-index: 1">
+            <div class="drawer-mask" style="z-index: 1;">
                 <div class="drawer" aria-drawer="setting_order_table_all" style="max-width: 200px">
                 <div class="drawer-door">
-                    <div class="drawerHandle" data-toggle="setting_order_table_all" style="cursor: pointer;align-self: center;margin-left: 2px;">》</div>
+                    <div class="drawerHandle" data-toggle="setting_order_table_all">》</div>
                 </div>
                 <div class="drawer-body">
                     <div class="row" style="padding: 5px;padding-left: 10px;">
-                        <div class="col-9">末差表头</div>
+                        <div class="col-9">未使用表头</div>
                     </div>
                     <div class="drawer-scrollbar">
                         <ol id="newTableHeader" style="padding-left: 50px">
-                            <li serial="1">aaaбегемот测试_1</li>
-                            <li serial="2">корм_2</li>
-                            <li serial="3">антон_3</li>
-                            <li serial="4">сало_4</li>
-                            <li serial="5">железосталь_5</li>
-                            <li serial="6">валик_6</li>
-                            <li serial="7">кровать_7</li>
-                            <li serial="8">краб_8</li>
+<!--                            <li serial="0"><img class="table-Header-li" style="margin-left: -40px;" src="images/add.png"/><span>示例表头</span></li>-->
                         </ol>
                     </div>
                 </div>
@@ -137,22 +123,18 @@
         <div class="container" style="padding-right: 0px;">
             <div class="row" style="text-align: right;">
                 <div class="col-12">
-                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-badge-tm" fill="currentColor" id="badge-tm"><path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"></path><path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z"></path></svg></span>
-                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-headphones" fill="currentColor" id="headphones"><path fill-rule="evenodd" d="M8 3a5 5 0 00-5 5v4.5H2V8a6 6 0 1112 0v4.5h-1V8a5 5 0 00-5-5z"></path><path d="M11 10a1 1 0 011-1h2v4a1 1 0 01-1 1h-1a1 1 0 01-1-1v-3zm-6 0a1 1 0 00-1-1H2v4a1 1 0 001 1h1a1 1 0 001-1v-3z"></path></svg></span>
-                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill" fill="currentColor" id="bookmark-star-fill"><path fill-rule="evenodd" d="M4 0a2 2 0 00-2 2v13.5a.5.5 0 00.74.439L8 13.069l5.26 2.87A.5.5 0 0014 15.5V2a2 2 0 00-2-2H4zm4.16 4.1a.178.178 0 00-.32 0l-.634 1.285a.178.178 0 01-.134.098l-1.42.206a.178.178 0 00-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 00.258.187l1.27-.668a.178.178 0 01.165 0l1.27.668a.178.178 0 00.257-.187L9.368 7.15a.178.178 0 01.05-.158l1.028-1.001a.178.178 0 00-.098-.303l-1.42-.206a.178.178 0 01-.134-.098L8.16 4.1z"></path></svg></span>
-                    <span><svg style="height: 15px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-chat-text-fill" fill="currentColor" id="chat-text-fill"><path fill-rule="evenodd" d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 01-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h4a.5.5 0 000-1h-4z"></path></svg></span>
+                    <span><svg height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-badge-tm" fill="currentColor" id="badge-tm"><path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"></path><path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z"></path></svg></span>
+                    <span><svg height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-headphones" fill="currentColor" id="headphones"><path fill-rule="evenodd" d="M8 3a5 5 0 00-5 5v4.5H2V8a6 6 0 1112 0v4.5h-1V8a5 5 0 00-5-5z"></path><path d="M11 10a1 1 0 011-1h2v4a1 1 0 01-1 1h-1a1 1 0 01-1-1v-3zm-6 0a1 1 0 00-1-1H2v4a1 1 0 001 1h1a1 1 0 001-1v-3z"></path></svg></span>
+                    <span><svg height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill" fill="currentColor" id="bookmark-star-fill"><path fill-rule="evenodd" d="M4 0a2 2 0 00-2 2v13.5a.5.5 0 00.74.439L8 13.069l5.26 2.87A.5.5 0 0014 15.5V2a2 2 0 00-2-2H4zm4.16 4.1a.178.178 0 00-.32 0l-.634 1.285a.178.178 0 01-.134.098l-1.42.206a.178.178 0 00-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 00.258.187l1.27-.668a.178.178 0 01.165 0l1.27.668a.178.178 0 00.257-.187L9.368 7.15a.178.178 0 01.05-.158l1.028-1.001a.178.178 0 00-.098-.303l-1.42-.206a.178.178 0 01-.134-.098L8.16 4.1z"></path></svg></span>
+                    <span><svg height="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-chat-text-fill" fill="currentColor" id="chat-text-fill"><path fill-rule="evenodd" d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 01-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h7a.5.5 0 000-1h-7zm0 2.5a.5.5 0 000 1h4a.5.5 0 000-1h-4z"></path></svg></span>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
-
-
 <style>
 
 </style>
-
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/sortable.min.js?v=cc"></script>
