--- a/popup.html
+++ b/popup.html
@@ -57,8 +57,6 @@
                                     </a>
                                 </div>
                             </div>
-
-
                         </div>
                         <div>
                             <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
@@ -136,6 +134,28 @@
                     </div>
                 </div>
             </div>
+            </div>
+            <div class="drawer-mask" >
+                <div class="drawer" aria-drawer="setting_plugin_manage">
+                    <div class="drawer-door">
+                        <div class="drawerHandle" data-toggle="setting_plugin_manage">》</div>
+                    </div>
+                    <div class="drawer-body">
+                        <div class="row" style="padding: 10px;">
+                            <div class="col-9">插件列表</div>
+                        </div>
+                        <div class="drawer-scrollbar">
+                            <ol id="pluginDistribution" style="padding-left: 0px">
+<!--                                <li serial="0" style="padding-left: 10px;">-->
+<!--                                    <div class="custom-control custom-switch">-->
+<!--                                        <input type="checkbox" class="custom-control-input" id="customSwitch1">-->
+<!--                                        <label style="padding-top: 3px;display: block;" class="custom-control-label" for="customSwitch1">开启</label>-->
+<!--                                    </div>-->
+<!--                                </li>-->
+                            </ol>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container" style="padding-right: 0;padding-bottom: 5px;">
