--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
         <div style="/* display: none; */">
             <div>
                 <img style="width: 34px;display: inline-block;vertical-align: middle;" src="images/favicon.png"/>
-                <span style="display: inline-block;vertical-align: middle;">辅助助手 <span class="badge badge-light" style="font-weight: bolder">V1.2.3</span></span>
+                <span style="display: inline-block;vertical-align: middle;">辅助助手 <span class="badge badge-light" style="font-weight: bolder">V1.2.4</span></span>
             </div>
         </div>
         <div style="/* display: none; */">
@@ -79,6 +79,9 @@
                                         </svg>
                                     </div>
                                     <span style="display: inline-block;vertical-align: middle;">打开后台</span>
+                                </button>
+                                <button value="open_yangkeduo_pdd" type="button" class="btn btn-outline-primary btn-sm btn-block">
+                                    <span style="display: inline-block;vertical-align: middle;">打开手机商城</span>
                                 </button>
                                 <button value="stop_opera" type="button" class="btn btn-outline-primary btn-sm btn-block">
                                     停止当前操作
