--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>辅助主页</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/contentScript.css">
+    <link rel="stylesheet" type="text/css" href="css/onstage.css">
 </head>
 <body style="margin: 0;padding: 0;font-size: 12px">
 <div style="width: 260px;margin: 0 auto;">
